Port client to MRJ 2.2.5 + Swing 1.1.1 (Mac OS 9.2.2)
Backports targets/macos9-mrj225 from the Java 1.3 baseline down to MRJ
2.2.5's JDK 1.1 core, verified against the genuine JDKClasses.zip/
MRJClasses.zip pulled from real Mac OS 9.2.2 hardware plus the real Swing
1.1.1 FCS release. All class files compile to version 45 (JDK 1.1 bytecode).

Collections Framework (biggest chunk, ~840 of the original 1113 compile
errors): ArrayList/HashMap/List/Map/Set/Iterator/LinkedList/Collections/
Comparator don't exist in JDK 1.1 - only Vector/Hashtable/Enumeration do,
and Vector only has the classic addElement/elementAt API, not add/get/remove.
Added SimpleList (Vector + modern method names), SimpleComparator, and
rewrote OrderedHashMap to extend Hashtable with an orderedEntries() method
instead of entrySet()/Set. Converted every Iterator-style loop to Enumeration
(hasMoreElements/nextElement), including two real Iterator.remove() call
sites rewritten as backward-indexed loops since Enumeration has no removal.

Other Java 1.2/1.3 API gaps: Properties.setProperty/System.setProperty ->
Hashtable.put, Random.nextInt(bound) -> nextDouble()-based bounding,
File.listFiles() -> File.list() + manual File construction, File.setReadOnly()
dropped (no permission API pre-1.2), String.compareToIgnoreCase -> manual
toLowerCase().compareTo(), Arrays.sort -> manual insertion sort,
UnsupportedOperationException -> RuntimeException, java.util.Timer/TimerTask
-> SimpleTimer (plain Thread-based), javax.sound.sampled -> sun.audio.
AudioPlayer/AudioStream (the classic pre-1.3 API, confirmed present in
MRJClasses.zip even though AudioPlayer.class is absent from JDKClasses.zip).

Desktop shell rewrite (ScaledWindow.java/ORSCApplet.java/OpenRSC.java): MRJ
has no java.awt.image.BufferedImage/Graphics2D at all (added in Java 1.2),
so the modern scaling/interpolation renderer is dropped entirely - not just
patched, since a fixed-resolution classic Mac display doesn't need runtime
window scaling anyway. Re